# friday-personal-ai-agent

./: .env.example  .gitignore  README.md  agent_friday.py  main.py  pyproject.toml  server.py
friday/: __init__.py  config.py
friday/prompts/: __init__.py  templates.py
friday/resources/: __init__.py  data.py
friday/tools/: __init__.py  system.py  utils.py  web.py
